--- a/Web/login-page/src/ui/components/login-comp/MainLogin/main-login-comp.scss
+++ b/Web/login-page/src/ui/components/login-comp/MainLogin/main-login-comp.scss
@@ -153,20 +153,30 @@
 @media only screen and (max-width: 800px) {
   .background {
     .container-flex {
-      padding-right: 4rem;
+      padding-right: 15rem;
       .LoginForm {
-        width: 300px;
+        width: 400px;
       }
     }
   }
 }
 
+@media only screen and (max-width: 617px) {
+  .background {
+    .container-flex {
+      padding-right: 15rem;
+      .LoginForm {
+        width: 400px;
+      }
+    }
+  }
+}
 @media only screen and (max-width: 500px) {
   .background {
     .container-flex {
-      padding-right: 4rem;
+      padding-right: 15rem;
       .LoginForm {
-        width: 300px;
+        width: 400px;
       }
     }
   }
