--- a/Web/login-page/src/ui/components/login-comp/NavbarComp/navbar-comp.scss
+++ b/Web/login-page/src/ui/components/login-comp/NavbarComp/navbar-comp.scss
@@ -43,6 +43,9 @@
         font-size: 15px;
         font-weight: lighter;
         padding-right: 60px;
+        &:focus {
+          outline: none;
+        }
       }
       .search-icon {
         position: absolute;
