--- a/Web/dashboard/src/ui/components/dashboard-comp/MainDashBoard/MainDashBoard.scss
+++ b/Web/dashboard/src/ui/components/dashboard-comp/MainDashBoard/MainDashBoard.scss
@@ -5,7 +5,7 @@
     width: 100%;
     float: left;
   }
-  .container-main-dashboard {
+  .container {
     max-width: 80%;
     margin: 0 auto;
   }
@@ -33,6 +33,7 @@
   .row {
     margin-top: 30px;
     .card {
+      width: 100%;
       display: flex;
       flex-direction: column;
       background-color: #ffffff;
@@ -40,7 +41,6 @@
       box-shadow: 9px 30px 44px rgba(65, 64, 64, 0.04);
       .card-body {
         padding: 10px 20px;
-        flex: 1 1 auto;
         h2 {
           padding: 15px 0;
         }
@@ -73,7 +73,8 @@
           }
         }
         .dashboard-logs,
-        .tickets-list {
+        .tickets-list,
+        .status-list {
           height: 270px;
           width: 300px;
           overflow: auto;
@@ -87,9 +88,21 @@
             border-radius: 50%;
           }
         }
+        .status-list {
+        }
       }
     }
   }
+}
+.dark-grey {
+  background-color: #f3f3f3;
+  color: #000;
+  margin-top: 10px;
+}
+.status-progress {
+  background-color: #6f4e37;
+  color: #d4a7a7;
+  text-align: center;
 }
 .tickets-list {
   overflow: auto;
@@ -115,9 +128,7 @@ li {
 .time-log {
   color: #9a8a8a !important;
 }
-.card-width {
-  width: 100%;
-}
+
 .log-id {
   width: 13px;
   height: 13px;
