--- a/Web/dashboard/src/ui/components/dashboard-comp/MainDashBoard/MainDashBoard.scss
+++ b/Web/dashboard/src/ui/components/dashboard-comp/MainDashBoard/MainDashBoard.scss
@@ -1,6 +1,5 @@
 #main-dashboard {
-  margin-top: 100px;
-  margin-left: 30px;
+  margin: 145px 60px 40px 30px;
   .grid-full {
     width: 100%;
     float: left;
