--- a/Web/dashboard/src/ui/components/dashboard-comp/NavBarComp/NavBarComp.scss
+++ b/Web/dashboard/src/ui/components/dashboard-comp/NavBarComp/NavBarComp.scss
@@ -13,9 +13,15 @@
   .app-name {
     font-size: 40px;
     font-weight: bold;
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    justify-content: center;
   }
   .left-navbar {
     float: left;
+    display: flex;
+    flex-wrap: nowrap;
     li {
       display: inline;
     }
@@ -57,12 +63,14 @@
       transition: all 0.5s;
       border: 1px solid #e4e0e0;
     }
+    li:nth-child(4) {
+      padding-left: 10px;
+    }
     li:nth-child(4) button {
       padding: 0.45rem 1rem;
       font-size: 0.8rem;
       line-height: 1.5;
       color: #6f4e37;
-      margin-left: 10px;
       border-radius: 20px;
       outline: none;
       background-color: #fff;
@@ -90,6 +98,8 @@
   }
   .right-navbar {
     float: right;
+    display: flex;
+    flex-wrap: nowrap;
     .notification {
       .noti-icon {
         font-size: 20px;
@@ -100,7 +110,7 @@
       position: relative;
       .noti-quantities {
         position: absolute;
-        top: -16px;
+        top: -4px;
         right: -14px;
         width: 16px;
         border: 1px solid #e22323;
@@ -117,9 +127,10 @@
     }
     li {
       display: inline;
+      text-align: center;
     }
     .profile {
-      margin-left: 30px;
+      padding-left: 30px;
       .account-name {
         color: #878787;
         font-size: 15px;
