--- a/Web/dashboard/src/ui/components/dashboard-comp/FooterComp/FooterComp.scss
+++ b/Web/dashboard/src/ui/components/dashboard-comp/FooterComp/FooterComp.scss
@@ -1,6 +1,8 @@
 #footer {
   border-top: 1px solid #d7d7d7;
-  padding: 2.2rem 0;
+  padding-top: 2.2rem;
+  padding-bottom: 2.2rem;
+  margin-left: 70px;
   margin-top: 5rem;
   .container {
     max-width: 80%;
@@ -28,3 +30,8 @@
   display: inline-block;
   padding-right: 0.5rem;
 }
+// @media only screen and (max-width: 1000px) {
+//   #footer {
+//     padding: 2.2rem 3rem;
+//   }
+// }
