--- a/Web/dashboard/src/ui/components/dashboard-comp/MainDashBoard/MainDashBoard.scss
+++ b/Web/dashboard/src/ui/components/dashboard-comp/MainDashBoard/MainDashBoard.scss
@@ -46,10 +46,39 @@
         .order-list {
           overflow: auto;
           height: 500px;
+          max-width: 100%;
           .order {
-            img {
+            .order-img {
+              position: relative;
+              overflow: hidden;
               max-width: 100px;
-              border-radius: 10px;
+              .status-order {
+                position: absolute;
+                top: 4px;
+                right: 0px;
+                z-index: 200;
+                padding: auto auto;
+                border-radius: 20px;
+                color: #fff;
+                text-align: center;
+                padding: 3px 8px;
+                font-size: 13px;
+              }
+              .processed {
+                background-color: #de9c39;
+              }
+              .on-hold {
+                background-color: #f73333;
+              }
+              img {
+                width: 100%;
+                border-radius: 10px;
+                transition: 0.5s ease;
+                &:hover {
+                  transform: scale(1.3);
+                  transform-origin: 50% 50%;
+                }
+              }
             }
             margin-bottom: 10px;
             display: flex;
@@ -75,7 +104,7 @@
         .tickets-list,
         .status-list {
           height: 270px;
-          width: 300px;
+          max-width: 100%;
           overflow: auto;
           table {
             width: 100%;
