--- a/Web/dashboard/src/ui/components/dashboard-comp/NavBarComp/NavBarComp.scss
+++ b/Web/dashboard/src/ui/components/dashboard-comp/NavBarComp/NavBarComp.scss
@@ -10,6 +10,11 @@
     float: left;
     width: 100%;
   }
+  .row-footer {
+    display: flex;
+    flex-wrap: nowrap;
+    margin: 0 -15px;
+  }
   .app-name {
     font-size: 40px;
     font-weight: bold;
@@ -48,6 +53,7 @@
       text-transform: uppercase;
       transition: all 0.5s;
       border: none;
+      cursor: pointer;
     }
 
     li:nth-child(3) button {
@@ -55,17 +61,20 @@
       font-size: 0.8rem;
       line-height: 1.5;
       color: #3a3a3a;
-      margin-left: 10px;
       border-radius: 20px;
       outline: none;
       background-color: #e4e0e0;
       text-transform: uppercase;
-      transition: all 0.5s;
+      transition: all 0.5s cubic-bezier(0.26, 0.06, 0.43, 0.15);
       border: 1px solid #e4e0e0;
+      cursor: pointer;
+      &:hover {
+        background-color: #6f4e37;
+        transition: all 0.5s;
+        color: #fff;
+      }
     }
-    li:nth-child(4) {
-      padding-left: 10px;
-    }
+
     li:nth-child(4) button {
       padding: 0.45rem 1rem;
       font-size: 0.8rem;
@@ -77,6 +86,7 @@
       text-transform: uppercase;
       transition: all 0.5s;
       border: 1px solid #6f4e37;
+      cursor: pointer;
       &:hover {
         background-color: #6f4e37;
         color: #fff;
@@ -101,6 +111,7 @@
     display: flex;
     flex-wrap: nowrap;
     .notification {
+      cursor: pointer;
       .noti-icon {
         font-size: 20px;
         border-color: #3a3a3a;
@@ -131,15 +142,27 @@
     }
     .profile {
       padding-left: 30px;
+      display: flex;
+      flex-wrap: nowrap;
+      cursor: pointer;
+      button {
+        background-color: transparent;
+        border: transparent;
+        outline: none;
+        padding: 0 !important;
+        display: inline-block;
+      }
       .account-name {
         color: #878787;
         font-size: 15px;
+        padding-top: 7px;
       }
       .acc-img {
-        margin-left: 10px;
+        padding-left: 3px;
         img {
-          width: 50px;
-          height: 50px;
+          border-radius: 50%;
+          width: 35px;
+          height: 35px;
         }
       }
     }
@@ -163,7 +186,11 @@
   //     }
   //   }
   // }
+  li {
+    padding-left: 10px;
+  }
 }
+
 .MuiFilledInput-underline:before {
   content: "";
   width: 0 !important;
