--- a/Web/dashboard/src/index.css
+++ b/Web/dashboard/src/index.css
@@ -6,3 +6,24 @@
 body {
   background-color: #f8f8f8;
 }
+li {
+  list-style-type: none;
+}
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #d7d7d7;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background-color: #999;
+}
