--- a/Web/login-page/src/ui/components/login-comp/NavbarComp/navbar-comp.scss
+++ b/Web/login-page/src/ui/components/login-comp/NavbarComp/navbar-comp.scss
@@ -1,185 +1,211 @@
-.navbar-menu {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.grid-full {
+  width: 100%;
+  float: left;
+}
+#top-menu {
+  background: #bd8d3d !important;
   z-index: 2;
   position: fixed;
   top: 0;
-  width: 100%;
-  height: 4rem;
-  background: #bd8d3d !important;
-  padding: 0.5rem 1rem;
   display: flex;
-  justify-content: flex-start;
-  align-items: center;
+  flex-wrap: nowrap;
   flex-direction: row;
-  .menu-list {
-    .logo {
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-      align-items: center;
-      img {
-        width: 4rem;
-        height: 3rem;
-      }
-      span {
-        margin-left: 2px;
-      }
-    }
-    .search {
-      position: relative;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin-left: 20rem;
-      input {
-        text-indent: 30px;
-        width: 34rem;
-        height: 41px;
-        border-radius: 12px;
-        font-size: 1rem;
-        font-weight: 700;
-        border: 1px solid #aa7011;
-        background-color: #aa7011;
-        color: #cacac1;
-        font-size: 15px;
-        font-weight: lighter;
-        padding-right: 60px;
-        &:focus {
-          outline: none;
-        }
-      }
-      .search-icon {
-        position: absolute;
-        top: 30px;
-        right: 10px;
-        font-size: 18px;
-        color: rgba(192, 192, 192, 0.3);
-      }
-    }
-    .item {
-      display: inline-block;
-      margin-right: 2rem;
-      padding-top: 0rem;
-      font-size: 1rem;
-      font-weight: 700;
-      line-height: 80px;
-      color: white;
-    }
-    .chevron-down-icon {
-      margin-left: 12px;
-      font-size: 8px;
-    }
-    .features {
-      position: relative;
-      cursor: pointer;
-      .dropdownlist1 {
-        position: absolute;
-        padding: 50px 16px 50px 60px;
-        border-radius: 12px;
-        background-color: #ffff;
-        box-shadow: var(--color-box-shadow);
-        top: 64px;
-        left: 0;
-        width: 25rem;
-        height: 13rem;
-        display: block;
-        opacity: 0;
-        visibility: hidden;
-        transform: translate(0, -40px);
-        transition: all 0.3s ease-in-out 0s, visibility 0s linear 0.3s,
-          z-index 0s linear 0.01s;
-      }
-      &:hover .dropdownlist1 {
-        visibility: visible; /* shows sub-menu */
-        opacity: 1;
-        z-index: 1;
-        transform: translateY(0%);
-        transition-delay: 0s, 0s, 0.3s;
-        .child-item {
-          color: #000;
-        }
-      }
-    }
-    .more {
-      position: relative;
-      cursor: pointer;
-      .dropdownlist2 {
-        width: 120px;
-        padding: 8px 0;
-        border-radius: 10px;
-        background-color: #bd8d3d;
-        top: 64px;
-        left: 0;
-        position: absolute;
-        visibility: hidden;
-        opacity: 0;
-        transform: translate(0, -40px);
-        transition: all 0.3s ease-in-out 0s, visibility 0s linear 0.3s,
-          z-index 0s linear 0.01s;
-        z-index: 200;
-      }
-      &:hover .dropdownlist2 {
-        visibility: visible; /* shows sub-menu */
-        opacity: 1;
-        z-index: 1;
-        transform: translateY(0%);
-        transition-delay: 0s, 0s, 0.3s;
-      }
-    }
-  }
-  .icon {
-    display: none;
-  }
-}
-.child-item {
-  height: 30px;
   align-items: center;
+  padding: 0 5px;
+  justify-content: space-between;
+}
+.left {
+  float: left;
   display: flex;
-  justify-content: center;
+  flex-wrap: nowrap;
+  margin-bottom: 0;
 }
-@media only screen and (max-width: 1418px) {
-  .navbar-menu {
-    .menu-list {
-      .search {
-        margin-left: 5rem;
-        input {
-          width: 20rem;
-        }
-      }
-    }
-  }
+.left li {
+  float: left;
+  padding: 10px 16px;
+  color: #fff;
+  font-weight: bold;
+  font-size: 14px;
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
+  cursor: pointer;
 }
-@media only screen and (max-width: 1407px) {
-  .navbar-menu {
-    .menu-list {
-      .search {
-        margin-left: 5rem;
-        input {
-          width: 20rem;
-        }
-      }
-    }
-  }
+.left li img {
+  margin-right: 10px;
 }
-@media only screen and (max-width: 1397px) {
-  .navbar-menu {
-    .menu-list {
-      .search {
-        margin-left: 5rem;
-        input {
-          width: 15rem;
-        }
-      }
-    }
-  }
+li {
+  list-style-type: none;
 }
-@media only screen and (max-width: 1092px) {
-  .navbar-menu {
-    .icon {
-      display: block;
-    }
-  }
+.search-input {
+  padding: 11px 10px;
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+  outline: none;
+  border: 1px solid #aa7011;
+  background-color: #aa7011;
+  color: #cacac1;
+  font-size: 15px;
+  font-weight: lighter;
+  text-indent: 16px;
+  padding-right: 60px;
+}
+.search-icon {
+  position: absolute;
+  right: 25px;
+  top: 10px;
+  color: rgba(192, 192, 192, 0.3);
+  font-size: 20px;
+}
+.search {
+  position: relative;
+  width: 30%;
+}
+.right {
+  float: right;
+  padding: 14px 14px;
+  background-color: #ff3a3a;
+  border-radius: 10px;
+  border: none;
+  outline: none;
+  transition: all 0.3s;
+}
+.right:hover {
+  background-color: #e22222;
+}
+.dropdown-1 {
+  position: absolute;
+  top: 68px;
+  background-color: #fff;
+  left: 10px;
+  padding: 50px 40px 50px 32px;
+  border-radius: 10px;
+}
+.li-parent {
+  position: relative;
+}
+.li-parent .chevron-down-icon {
+  margin-left: 5px;
+  font-size: 8px;
+}
+.li-parent:hover > .dropdown1 {
+  visibility: visible;
+  opacity: 1;
+  z-index: 1;
+  transform: translateY(-1%);
+  transition-delay: 0s, 0s, 0.3s;
+}
+.dropdown1 {
+  left: 12px;
+  top: 68px;
+  position: absolute;
+  width: 340px;
+  height: 133px;
+  background-color: #fff;
+  border-radius: 10px;
+  opacity: 0;
+  visibility: hidden;
+  transform: translate(0, -30px);
+  transition: all 0.3s ease-in-out;
+}
+.dropdown2 {
+  position: absolute;
+  top: 68px;
+  left: 12px;
+  height: auto;
+  background-color: #fff;
+  border-radius: 10px;
+  visibility: hidden;
+  opacity: 0;
+  transform: translate(0, -30px);
+  transition: all 0.3s ease-in-out;
+}
+.dropdown2 .list-child li {
+  display: block;
+  padding: 13px 22px;
+}
+.li-parent:hover > .dropdown2 {
+  visibility: visible;
+  opacity: 1;
+  transform: translateY(-1%);
+}
+.list-child li {
+  color: #000;
+}
 
-  .menu-list {
+.action {
+  display: none;
+}
+.icon-bars {
+  display: none;
+}
+@media only screen and (max-width: 900px) {
+  .left {
     display: none;
+  }
+  .action {
+    display: block;
+  }
+  .search {
+    width: 50%;
+  }
+  .action {
+    display: flex;
+    align-items: center;
+    margin-right: 10px;
+  }
+  .hidden-logo img {
+    width: 50px;
+    height: 35px;
+  }
+  .hidden-logo {
+    margin-right: 4px;
+  }
+  .icon-bars {
+    display: block;
+    padding-right: 10px;
+    width: 33px;
+    margin-left: 7px;
+  }
+  .icon-bars i {
+    width: 100%;
+    background-color: #fff;
+    height: 3px;
+    margin-top: 4px;
+    font-weight: bold;
+    display: block;
+  }
+  .icon-bars i:nth-child(1) {
+    width: 100%;
+  }
+  .icon-bars i:nth-child(2) {
+    width: 60%;
+  }
+  .icon-bars i:nth-child(3) {
+    width: 40%;
+  }
+}
+@media only screen and (max-width: 700px) {
+  .right {
+    display: none;
+  }
+  .search {
+    width: 100%;
+    height: 100%;
+    display: block;
+    margin-right: 0;
+  }
+  .search input[type="text"] {
+    border-radius: 0;
+  }
+  #top-menu {
+    padding-left: 5px;
+    padding-right: 0;
   }
 }
