--- a/Web/login-page/src/ui/components/login-comp/MainLogin/main-login-comp.scss
+++ b/Web/login-page/src/ui/components/login-comp/MainLogin/main-login-comp.scss
@@ -6,7 +6,7 @@
   background-repeat: no-repeat;
   background-size: cover;
 
-  .container-flex {
+  .main {
     .LoginForm {
       width: 484px;
       border: 1px solid #fff;
@@ -129,43 +129,18 @@
   }
 }
 
-@media only screen and (max-width: 1278px) {
+@media only screen and (max-width: 1199px) {
   .background {
-    .container-flex {
-      .LoginForm {
-        width: 400px;
-      }
+    .main {
+      padding-left: 0;
     }
   }
-}
-@media only screen and (max-width: 800px) {
-  .background {
-    .container-flex {
-      padding-right: 15rem;
-      .LoginForm {
-        width: 400px;
-      }
-    }
-  }
-}
-
-@media only screen and (max-width: 617px) {
-  .background {
-    .container-flex {
-      padding-right: 15rem;
-      .LoginForm {
-        width: 400px;
-      }
-    }
-  }
-}
-@media only screen and (max-width: 500px) {
-  .background {
-    .container-flex {
-      padding-right: 15rem;
-      .LoginForm {
-        width: 400px;
-      }
+  .title-container {
+    .btn {
+      flex-direction: column !important;
+      display: flex;
+      justify-content: center !important;
+      margin-bottom: 30px;
     }
   }
 }
