--- a/Web/login-page/src/ui/components/login-comp/FooterComp/footer-comp.scss
+++ b/Web/login-page/src/ui/components/login-comp/FooterComp/footer-comp.scss
@@ -1,14 +1,18 @@
-.footer-content {
+#footer-content {
   margin-top: 10rem;
-  // padding-left: 9rem;
-  .description {
+  .grid-full {
+    float: left;
+    width: 100%;
+  }
+  .footer-details {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
     svg {
       width: 12px;
       height: 12px;
       color: #b88a5f;
       margin-right: 10px;
-
-      // transition: margin-bottom 2s ease-in-out;
     }
     .social-media {
       svg:hover {
@@ -22,19 +26,33 @@
       color: #e2d6cb;
       font-size: 1rem;
     }
-  }
-  h3 {
-    color: #dc7718;
-  }
-  li {
-    color: #e2d6cb;
-    margin-top: 10px;
-  }
-  .app-store img {
-    width: 9rem;
-  }
-  .google-play img {
-    width: 9rem;
+
+    h3 {
+      color: #dc7718;
+    }
+    li {
+      color: #e2d6cb;
+      margin-top: 10px;
+    }
+    .app-store img {
+      width: 9rem;
+    }
+    .google-play img {
+      width: 9rem;
+    }
+    .brand-footer {
+      display: flex;
+      align-items: center;
+      margin-bottom: 20px;
+      img {
+        border-radius: 12px;
+      }
+      .brand-title {
+        color: #dc7718;
+        font-weight: bold;
+        margin-left: 20px;
+      }
+    }
   }
   .copy-right {
     display: flex;
@@ -46,14 +64,9 @@
     flex-direction: column;
     label {
       color: #dc7718;
-      // margin-left: 32rem;
-      // display: flex;
-      // justify-content: center;
-      // align-items: center;
     }
     .line {
       border-top: 2px solid #dc7718;
-      // display: block;
       width: 100%;
       display: flex;
       justify-content: center;
@@ -63,13 +76,27 @@
   }
 }
 @media (max-width: 1384px) {
-  .footer-content {
-    margin-left: 7rem;
+  #footer-content {
+    // margin-left: 7rem;
     padding: 0 113px;
   }
 }
 @media (max-width: 1093px) {
-  .footer-content {
+  #footer-content {
     margin-left: 0;
+  }
+}
+@media only screen and (max-width: 1100px) {
+  .footer-details {
+    justify-content: center !important;
+  }
+  .footer-navigation {
+    display: none;
+  }
+  .footer-info {
+    text-align: center;
+  }
+  .brand-footer {
+    justify-content: center;
   }
 }
