login-page updated

--- a/Web/login-page/src/ui/components/login-comp/NavbarComp/navbar-comp.scss
+++ b/Web/login-page/src/ui/components/login-comp/NavbarComp/navbar-comp.scss
@@ -137,6 +137,8 @@
     border: none;
     outline: none;
     transition: all 0.3s;
+    color: #fff;
+    font-weight: 600;
     &:hover {
       background-color: #e22222;
     }
