login-page UI done

--- a/Web/login-page/src/ui/components/login-comp/MainLogin/main-login-comp.scss
+++ b/Web/login-page/src/ui/components/login-comp/MainLogin/main-login-comp.scss
@@ -27,7 +27,7 @@
       width: 80px;
       background-color: #fff;
       z-index: 1;
-      color: #dad3c7;
+      color: #a58d65;
       font-size: 1rem;
       cursor: text;
     }
