--- a/Web/login-page/src/ui/components/login-comp/NavbarComp/navbar-comp.scss
+++ b/Web/login-page/src/ui/components/login-comp/NavbarComp/navbar-comp.scss
@@ -70,7 +70,7 @@
         transition: all 0.3s ease-in-out;
         padding: 30px 14px;
         .li-child-item {
-          color: #ccc;
+          color: #8e8a8a;
           padding: 5px 0;
           display: block;
           width: 100%;
