--- a/Web/login-page/src/ui/components/login-comp/NavSmallDeviceComp/NavSmallDeviceComp.scss
+++ b/Web/login-page/src/ui/components/login-comp/NavSmallDeviceComp/NavSmallDeviceComp.scss
@@ -1,4 +1,5 @@
 #nav-widget-small-device {
+  display: none;
   position: fixed;
   left: 0;
   top: 0;
@@ -126,4 +127,5 @@
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 2;
+  display: none;
 }
