--- a/Web/dashboard/src/ui/components/dashboard-comp/SideBarComp/SideBarComp.scss
+++ b/Web/dashboard/src/ui/components/dashboard-comp/SideBarComp/SideBarComp.scss
@@ -5,20 +5,26 @@
   border-right: 1px solid #f1e8e8;
   box-shadow: 0px 5px 5px #737272;
   border-radius: 0 0.75rem 0.75rem 0;
-  overflow: auto;
+
+  transition: all 0.5s ease;
   float: left;
   position: fixed;
   top: 71px;
   z-index: 300;
-  bottom: 0;
   width: 120px;
+
   .tabs {
+    overflow: auto;
+    height: 100%;
     li {
       padding: 50px 0;
       text-align: center;
       border-bottom: 1px solid #f1dcdc;
       position: relative;
       cursor: pointer;
+      // &:hover {
+      //   overflow-y: overlay;
+      // }
       &:focus-visible {
         color: #6f4e37;
       }
